--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.2",
-    "smtpexpress": "^0.0.15"
+    "smtpexpress": "^0.0.15",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
