--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "smtpexpress": "^0.0.15",
     "swiper": "^11.1.15"
